--- a/src/RocketConsole/RocketConsole.csproj
+++ b/src/RocketConsole/RocketConsole.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.EventLog" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
