--- a/src/zip/ZipUtility/Test/XunitZipTests/XunitZipTests.csproj
+++ b/src/zip/ZipUtility/Test/XunitZipTests/XunitZipTests.csproj
@@ -35,6 +35,12 @@
     <None Update="elm\control-file-04.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="elm\shapes-03.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="elm\shapes-02.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="elm\shapes-01.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
